make output nicer looking

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         min-height:400px;
         padding-right: 10px;
       }
+      #listoutput span { width: 20px; height: 20px; display:inline-block; margin: 0px; }
     </style>
   </head>
   <body>
@@ -35,7 +36,7 @@
         <div id="colorWheel"></div>
         <div id="output">
           <pre id="code-output"></pre>
-          <p class="col-lg-10" id="listoutput"></p>
+          <div class="col-lg-10" id="listoutput"></div>
         </div>
       </div>
 
