--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <div class="row">
       <div id="left" class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
         <div id="colorWheel"></div>
+        <div id="options">
+          <label id="one" labelfor="spliceN">Splices: </label> <input type="number" id="spliceN" value="10" />
+        </div>
         <div id="output">
           <pre id="code-output"></pre>
           <div class="col-lg-10" id="listoutput"></div>
