--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="css/simplegrid.css" rel="stylesheet">
     <style>
       body, h1 {
-        /*font-family: 'HelveticaNeue-Light', Arial, san-serif;*/
         font-family: 'Raleway', sans-serif;
       }
       h1 {
@@ -30,7 +29,7 @@
       #viewport {
         position: absolute;
         width: 461px;
-        height: 600px;
+        height: 800px;
         overflow: hidden;
         margin-top: -203px;
         margin-left: 605px;
@@ -44,19 +43,19 @@
         margin-left:0px;
       }
 .header {
-        background-image: url('lib/bg.jpg');
-        background-position: center top;
+        background-image: url('../lib/colours.jpg');
+	background-size: cover;
+        background-position: center center;
         background-repeat: no-repeat;
-        background-color: #000000;
-        color: #f6f6f6;
+        background-color: #fff;
+        color: #000;
         -moz-box-shadow: 0px 2px 9px #888;
         -webkit-box-shadow: 0px 2px 9px #888;
         box-shadow: 0px 2px 9px #888;
-        max-height: 420px;
 }
 
 .header a {
-        color: #f6f6f6;
+        color: #FF50B9;
 }
 
 .header p {
@@ -71,10 +70,17 @@
 }
 
 .header-content {
+	background: rgba(255, 255, 255, 0.3);
+	border-radius: 4px;
+	padding-left: 20px;
         padding-bottom: 20px;
         margin-top: -20px;
 }
 
+a.button {
+	color: #fff;
+	text-decoration: none;
+}
 .button {
         background: #2799c6; /* Old browsers */
         background: -moz-linear-gradient(top,  #2799c6 16%, #006599 100%); /* FF3.6+ */
@@ -85,15 +91,13 @@
         background: linear-gradient(to bottom,  #2799c6 16%,#006599 100%); /* W3C */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2799c6', endColorstr='#006599',GradientType=0 ); /* IE6-9 */
         border-radius: 3px;
-        padding: 5px;
-        border: none;
+        padding: 9px 20px;
         font-size: 18px;
         color: #f6f6f6;
         font-family: 'Raleway', sans-serif;
         font-weight: 200;
         border: 1px solid #e5edf4;
         margin-right: 20px;
-        width: 95px;
         border: 1px solid #458EB8;
         display: inline-block;
         text-align: center;
@@ -118,13 +122,20 @@
   <body>
     <div class="header">
       <div class="headerContent grid grid-pad">
-        <div class="col-1-2 header-content">
+        <div class="col-1-1">
           <h1>
-            Color Therapy
+            Color Therapy for Highcharts
           </h1>
+	<p>&nbsp;</p>
+	</div>
+	<div class="col-1-3 header-content">
           <p>
-            Color Therapy was created for developers who need a <span>seamless</span> way to pick colors that go well together. Color Therapy currently is for <span>Highcharts</span> but can easily adapt to any svg chart. Questions can be direct to <a href="http://github.com/katychuang">@katychuang</a></p>
+            Color Therapy was created for developers and scientists who need a <span>seamless</span> way to pick colors that go well together. Color Therapy currently is available for <span>Highcharts</span> but can easily adapt to any svg rendered chart. <br/>
+</p>
+<p>It is still a work in progress.</p>
+<p>Questions can be directed to <a href="http://github.com/katychuang">@katychuang</a></p>
                 <a class="button gradient" href="https://github.com/katychuang/highcharts-color-therapy/zipball/master" title="Simple Grid Download">Download</a><a class="button gradient" href="https://github.com/katychuang/highcharts-color-therapy" title="Simple Grid Github">Github</a>
+<p>&nbsp;</p>
         </div>
         <div id="viewport"></div>
       </div>
@@ -158,7 +169,7 @@
 <script src="config.js" type="text/javascript"></script>
 <script src="http://cloud.github.com/downloads/Dhirajkumar/Demos/jquery-easing.min.js"></script>
       <script type="text/javascript">
-          $(function () {
+/*          $(function () {
               // if (!$.browser.msie) {
               if ("a" === "a") {
                   var a = 0;
@@ -238,5 +249,6 @@
                   }
               }
           }())
+*/
       </script>
 </html>
