--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         margin-left:0px;
       }
 .header {
-        background-image: url('../lib/colours.jpg');
+        background-image: url('lib/colours.jpg');
 	background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
